# openglqtquickexample

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OpenGlBufferQtQuick.cpp  OpenGlBufferQtQuick.h  OpenGlVideoQtQuick.cpp  OpenGlVideoQtQuick.h  README.md  app  cmake_install.cmake  main.cpp  main.qml  qrc_qml.cpp
DesktopSampleApp/: app.json  index.desktop.js  package.json
DesktopSampleApp/android/: settings.gradle
DesktopSampleApp/android/app/: BUCK  build.gradle
DesktopSampleApp/android/app/src/main/: AndroidManifest.xml
DesktopSampleApp/desktop/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  run-app.sh
DesktopSampleApp/desktop/lib/: Makefile  cmake_install.cmake
DesktopSampleApp/desktop/lib/react-native_autogen/: moc_predefs.h  mocs_compilation.cpp
DesktopSampleApp/ios/DesktopSampleApp/: AppDelegate.m  Info.plist
DesktopSampleApp/ios/DesktopSampleApp.xcodeproj/: project.pbxproj
DesktopSampleApp/ios/DesktopSampleApp/Base.lproj/: LaunchScreen.xib
DesktopSampleApp/ios/DesktopSampleAppTests/: DesktopSampleAppTests.m
DesktopSampleApp/modules/mediaplayer/desktop/: CMakeLists.txt  mediaplayermanager.cpp  mediaplayermanager.h
app_autogen/: mocs_compilation.cpp
app_autogen/EWIEGA46WW/: moc_OpenGlBufferQtQuick.cpp  moc_OpenGlVideoQtQuick.cpp
qt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.qml  orwell  qrc_qml.cpp
qt/orwell_autogen/: moc_predefs.h  mocs_compilation.cpp
qt/orwell_autogen/ORWJ6TMUPJ/: moc_OpenGlBufferQtQuick.cpp
(+67 files in other folders)
